# RateEye

./: .dockerignore  .gitignore  COPYRIGHT.txt  Dockerfile  INSTALL.md  INSTALL_GUIDE.txt  README.md  VERSION  database.py  debug_barchart.py  debug_cnbc.py  debug_duckduckgo.py  debug_finnhub.py  debug_google_finance.py  debug_google_suggestions.py  debug_investopedia.py  debug_marketwatch.py  debug_minimal_search.py  debug_nasdaq.py  debug_save_yahoo.py  debug_scrape_voo.py  debug_seeking_alpha.py  debug_symbols.py  debug_tipranks.py  debug_tradingview.py  debug_wsj.py  debug_yahoo.py  debug_yahoo_curl.py  debug_yahoo_internal.py  debug_yahoo_page.py  debug_yahoo_search.py  debug_yahoo_v6.py  debug_yahoo_v7.py  debug_yahoo_v8.py  debug_yfinance.py  docker-compose.yml  i18n.py  inspect_assets.py  inspect_fzrox.py  inspect_yields.py  (+16 more)
doc/: ARCHITECTURE.md  DEPLOYMENT.md
metadata/: securities_maint_activity_metadata.json
nginx/: nginx.conf
scripts/: README.md  build_standalone.py  release.py  start_milestone.py  sync_version.py  windows_installer.iss
templates/: about.html  admin_permissions.html  admin_roles.html  admin_securities.html  admin_users.html  base.html  change_password.html  forgot_password.html  index.html  login.html  maintenance_activity_base.html  register.html  settings.html  system_settings.html  user_change_password.html  user_change_username.html  user_settings.html
tests/: conftest.py  test_auth.py  test_basic.py  test_bulk_ops.py  test_data_migration.py  test_endpoints.py  test_filters.py  test_main.py  test_metadata_rendering.py  (+9 more)
(+60 files in other folders)
