[project]
name = "rateeye"
version = "1.0.4-dev"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Patrick Tallman", email = "tallman.patrick@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"
