[project]
name = "rateeye"
version = "1.0.7"
description = "High-performance yield tracking and security maintenance application"
readme = "README.md"
authors = [
    { name = "Patrick Tallman", email = "tallman.patrick@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "pyyaml>=6.0.3",
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "jinja2",
    "passlib[bcrypt]",
    "python-multipart",
    "authlib",
    "httpx",
    "itsdangerous",
    "beautifulsoup4",
    "yfinance",
    "curl_cffi",
    "psycopg2-binary",
    "pymysql",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  "/scripts",
  "/milestone_tasks.yaml",
  "/.pytest_cache",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rateeye"]
exclude = [
  "**/tests",
]
